--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
 @import "tailwindcss"; 
 @plugin "daisyui";
 
@@ -34,4 +39,5 @@
   .text-blink {
     animation: pulseBlink 1.2s infinite ease-in-out;
   }
+  
   
